<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Variety</string>
    <string name="action_settings">Settings</string>
    <string name="payCalc">Pay Calculator</string>
    <string name="healthClub">Health Club</string>
    <color name="backColor">#565465</color>
    <color name="textBack">#097124</color>
    <color name="btnColor">#34A678</color>
    <color name="almostBack">#464455</color>
    <color name="textColor">#EFEFEF</color>
    <color name="roundedBtn">#445678</color>
    <color name="roundedBtnPressed">#887711</color>
    <string name="close">Close</string>
    <string name="calculate">Calculate</string>
    <string name="clear">Clear</string>
    <string name="hours">Enter Hours</string>
    <string name="rate">Enter Rate</string>
    <string name="result">Result will appear here</string>
    <string name="zero_input">Both entries can\'t be zeros</string>
    <string name="blank"> </string>
    <string name="zeros">0.0</string>
    <string name="zero">0</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="welcome">Welcome screen</string>
    <string name="memFeeCalc">Membership Fee Calculator</string>
    <string name="memType">Type of Membership</string>
    <string name="stdAdult">Standard Adult</string>
    <string name="subAdult">Substandard Adult</string>
    <string name="child">Child</string>
    <string name="student">Student</string>
    <string name="senior">Senior Citizen</string>
    <string name="seniorNon">Senior non-citizen</string>
    <string name="opts">Options</string>
    <string name="yoga">Yoga</string>
    <string name="Karate">Karate</string>
    <string name="perTrainer">Personal Trainer</string>
    <string name="candle">Candlelight Dinner</string>
    <string name="beach">Walk on the Beach</string>
    <string name="memLength">Membership Length</string>
    <string name="enterMonths">Enter Number of Months</string>
    <string name="memFee">Membership Fees</string>
    <string name="monthFee">Monthly Fee</string>
    <string name="total">Total</string>
    <string name="shrink1">Shrink Type of Membership</string>
    <string name="expand1">Expand Type of Membership</string>
    <string name="shrink">Shrink</string>
    <string name="expand">Expand</string>
</resources>
