<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.tuf40653.variety.HealthClub"
    android:background="@color/backColor"
    >

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/memFeeCalc"
        android:background="@color/backColor"
        android:gravity="center"
        android:layout_marginTop="10dp"
        />

<ScrollView
    android:id="@+id/encompassScroll"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fadeScrollbars="true"
    android:focusableInTouchMode="true"
    android:scrollbarFadeDuration="200"
    android:background="@color/backColor"
    android:layout_below="@id/textTitle"

    >



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:background="@color/backColor"
        android:layout_below="@+id/textTitle"
        >

        <Button
            android:id="@+id/shrink1"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center|right"
            android:text="@string/shrink1"
            android:onClick="shrinkClick"
            android:background="@drawable/shrink_button"/>

        <FrameLayout
            android:id="@+id/topGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="42dp"
            android:padding="5dp"
            android:background="@drawable/round_corner"
            >

            <TextView
                android:id="@+id/textType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/memType"
                />

            <RadioGroup
                android:id="@+id/radGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30sp"
                android:layout_marginLeft="50sp"

                >

                <RadioButton
                    android:id="@+id/radButton1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/stdAdult"
                    android:checked="true"
                    />
                <RadioButton
                    android:id="@+id/radButton5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/subAdult"/>
                <RadioButton
                    android:id="@+id/radButton2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/child"/>
                <RadioButton
                    android:id="@+id/radButton3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/student"/>
                <RadioButton
                    android:id="@+id/radButton4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/senior"/>
                <RadioButton
                    android:id="@+id/radButton6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/seniorNon"/>
            </RadioGroup>



        </FrameLayout>

            <RelativeLayout
                android:id="@+id/secondGroup"
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/topGroup"
                android:padding="5dp"
                android:background="@drawable/round_corner">

                <TextView
                    android:id="@+id/options"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/opts"/>

                <CheckBox
                    android:id="@+id/chkYoga"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/yoga"
                    android:layout_below="@+id/options"
                    android:layout_marginLeft="50sp"
                    />
                <CheckBox
                    android:id="@+id/chkKarate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Karate"
                    android:layout_below="@+id/chkYoga"
                    android:layout_marginLeft="50sp"/>
                <CheckBox
                    android:id="@+id/chkPersonal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/perTrainer"
                    android:layout_below="@+id/chkKarate"
                    android:layout_marginLeft="50sp"/>
                <CheckBox
                    android:id="@+id/chkCandle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/candle"
                    android:layout_below="@id/chkPersonal"
                    android:layout_marginLeft="50sp"
                    />
                <CheckBox
                    android:id="@+id/chkBeach"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/beach"
                    android:layout_below="@id/chkCandle"
                    android:layout_marginLeft="50sp"
                    />


            </RelativeLayout>

        <RelativeLayout
            android:id="@+id/thirdGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/secondGroup"
            android:layout_marginTop="15dp"
            android:padding="5dp"
            android:focusableInTouchMode="true"
            android:background="@drawable/round_corner">

            <TextView
                android:id="@+id/length"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/memLength"/>

            <TextView
                android:id="@+id/numMonths"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enterMonths"
                android:layout_below="@id/length"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="50sp"/>

            <EditText

                android:id="@+id/editMonths"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/numMonths"
                android:layout_marginLeft="50dp"
                android:inputType="numberDecimal|numberSigned"
                android:text="@string/zero"
                android:gravity="center"
                />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/fourthGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/thirdGroup"
            android:layout_marginTop="15dp"
            android:padding="5dp"
            android:background="@drawable/round_corner">

            <TextView
                android:id="@+id/memFees"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/memFee"/>

            <TextView
                android:id="@+id/monFee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/monthFee"
                android:layout_below="@+id/memFees"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="50dp"/>
            <TextView
                android:id="@+id/total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total"
                android:layout_below="@id/monFee"
                android:layout_marginLeft="50dp"/>

        </RelativeLayout>


        <LinearLayout
            android:id="@+id/fifthGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/fourthGroup"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            >

            <Button
                android:id="@+id/hcClear"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginRight="5dp"
                android:text="@string/clear"
                android:onClick="hcClear"
                android:background="@drawable/picture_button"/>

            <Button
                android:id="@+id/hcClose"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginLeft="5dp"
                android:text="@string/close"
                android:onClick="hcClose"
                android:background="@drawable/picture_button"
                />

        </LinearLayout>
    </RelativeLayout>
    </ScrollView>
    </RelativeLayout>
