<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/backColor"
    tools:context="com.example.tuf40653.variety.MainActivity">

    <TextView android:text="@string/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textColor="@color/textColor"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        />

    <Button
        android:id="@+id/firstApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/payCalc"
        android:layout_centerInParent="true"
        android:onClick="takeToPayCalc"
        />

    <Button
        android:id="@+id/secondApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/healthClub"
        android:layout_below="@id/firstApp"
        android:layout_centerHorizontal="true"
        android:onClick="takeToHealthClub"/>

    <Button
        android:id="@+id/closeMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/close"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="btnClose"/>
</RelativeLayout>
