<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".PayCalc"
    android:background="@color/backColor">


    <LinearLayout
        android:id="@+id/linLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:gravity="center"
        >

        <TextView
            android:id="@+id/textHours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hours"
            android:textSize="20dp"
            />

        <EditText
            android:id="@+id/Hours"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/zeros"
            android:inputType="numberDecimal|numberSigned"
            android:selectAllOnFocus="true"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linLayout1"
        android:gravity="center"
        >

        <TextView
            android:id="@+id/textRate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rate"
            android:paddingRight="10sp"
            android:textSize="21sp"
            />

    <EditText
        android:id="@+id/Rate"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/zeros"
        android:gravity="center"
        android:inputType="numberDecimal|numberSigned"
        android:selectAllOnFocus="true"
        />

    </LinearLayout>


    <TextView
        android:id="@+id/TextShowResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result"
        android:textSize="15sp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/linLayout2"
        android:layout_marginTop="20dp"
        android:textColor="@color/textColor"
        android:background="@drawable/round_corner"
        android:gravity="center"
        android:padding="5dp"
        />

            <Button
                android:id="@+id/Calc"
                android:layout_width="110dp"
                android:layout_height="30dp"
                android:text="@string/calculate"
                android:layout_toLeftOf="@+id/Clear"
                android:layout_alignParentBottom="true"
                android:onClick="calcClick"
                android:background="@drawable/picture_button"
                android:layout_margin="5dp"

                />

            <Button
                android:id="@+id/Clear"
                android:layout_width="110dp"
                android:layout_height="30dp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:text="@string/clear"
                android:onClick="clearClick"
                android:background="@drawable/picture_button"

                android:layout_margin="5dp"
                />

            <Button
                android:id="@+id/Close"
                android:layout_width="110dp"
                android:layout_height="30dp"
                android:layout_alignParentBottom="true"
                android:layout_toRightOf="@+id/Clear"
                android:text="@string/close"
                android:onClick="onClose"
                android:background="@drawable/picture_button"
                android:layout_margin="5dp"
                
                />


</RelativeLayout>
